--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/teachers
-spring.datasource.username=postgres
-spring.datasource.password=1649
+spring.datasource.url=${SPRING_URL}
+spring.datasource.username=${SPRING_USERNAME}
+spring.datasource.password=${SPRING_PASSWORD}
 spring.jpa.hibernate.ddl-auto=update
